--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,1 +1,146 @@
-/* Ember supports plain CSS out of the box. More info: https://cli.emberjs.com/release/advanced-use/stylesheets/ */
+body {
+  display: flex;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.content {
+  margin-left: 50px;
+  width: calc(100% - 50px);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 10px;
+}
+
+.section {
+  padding: 20px;
+  padding-top: 5px; /* Reduce top padding if needed */
+  padding-left: 5px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.section-link {
+  color: #333;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px;
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 0px; /* Adjust or remove top margin */
+  position: relative;
+  top: 0; /* Align to the top */
+}
+
+#dive-back-in-section {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+#statistics-section {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+}
+
+#my-books-section {
+  grid-row: 1 / 3;
+  grid-column: 2 / 3;
+}
+
+a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 0px;
+}
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 50px;
+  height: 100vh;
+  background: #333;
+  transition: width 0.5s;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.sidebar:hover {
+  width: 250px;
+}
+
+#search-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+#search-icon {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: left;
+}
+
+.sidebar:not(:hover) #search-icon {
+  background: none;
+  display: block;
+  text-align: left;
+}
+
+.sidebar:hover #search-input,
+.sidebar:hover #search-button,
+.sidebar:hover .sidebar-hidden {
+  display: inline;
+}
+
+.sidebar:hover #search-icon {
+  display: none;
+}
+
+.sidebar-section {
+  padding: 10px;
+  color: #fff;
+  font-size: 18px;
+  display: block;
+  text-align: left;
+}
+
+.sidebar-section a {
+  color: #fff;
+  text-decoration: none;
+  display: none; /* Hide by default, shown on hover */
+}
+
+.sidebar-section:hover {
+  background-color: #0000008e;
+}
+
+#search-input {
+  flex-grow: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#search-button {
+  padding: 10px;
+  background-color: #ffffffe8;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+#search-input,
+#search-button,
+.sidebar-hidden {
+  display: none;
+}
