--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,6 @@
+@import url("book-search.css");
+@import url("sidebar.css");
+
 body {
   display: flex;
   min-height: 100vh;
@@ -38,6 +41,84 @@ body {
   top: 0; /* Align to the top */
 }
 
+.books-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  max-height: calc(4 * 100px);
+  overflow-y: hidden;
+  gap: 10px;
+  margin: 10px;
+}
+
+.my-book {
+  flex: 0 0 auto;
+  position: relative;
+  width: 150px;
+  height: 250px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.my-book-cover {
+  width: 150px;
+  height: auto;
+  transition:
+    opacity 0.5s,
+    filter 0,
+    5s;
+  will-change: opacity, filter;
+}
+
+.my-book-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: rgba(95, 95, 95, 0.027);
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.5s;
+  will-change: opacity;
+}
+.my-book-info > * {
+  margin: 10px 20px;
+}
+
+.my-book-title,
+.my-book-author {
+  margin: 5px 3;
+  overflow: hidden;
+  white-space: normal;
+}
+
+.my-book-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  font-style: italic;
+  line-height: 1.1;
+}
+
+.my-book:hover .my-book-cover {
+  opacity: 0.3;
+  filter: blur(5px);
+}
+.my-book:hover .my-book-info {
+  opacity: 1;
+}
+
 #dive-back-in-section {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
@@ -58,88 +139,10 @@ a {
   margin-top: 0;
 }
 
-.sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 50px;
-  height: 100vh;
-  background: #333;
-  transition: width 0.5s;
-  z-index: 1000;
-  overflow: hidden;
-}
-
-.sidebar:hover {
-  width: 250px;
-}
-
-#search-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
-#search-icon {
-  color: white;
-  font-size: 18px;
-  cursor: pointer;
-  text-align: left;
-}
-
-.sidebar:not(:hover) #search-icon {
-  background: none;
-  display: block;
-  text-align: left;
-}
-
-.sidebar:hover #search-icon {
-  display: none;
-}
-
-.sidebar:hover #search-input,
-.sidebar:hover #search-button,
-.sidebar:hover .sidebar-hidden {
-  display: inline;
-}
-
-.sidebar-section {
-  padding: 10px;
-  color: #fff;
-  font-size: 18px;
-  display: block;
-  text-align: left;
-}
-
-.sidebar-section a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.sidebar-section:hover {
-  background-color: #0000008e;
-}
-
-#search-input {
-  flex-grow: 1;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-#search-button {
-  padding: 10px;
-  background-color: #ffffffe8;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  margin-left: 10px;
-  cursor: pointer;
-}
-
-#search-input,
-#search-button,
-.sidebar-hidden {
-  display: none;
+h1 {
+  text-align: center;
+  padding-left: 50%;
+  padding-right: 50%;
+  text-shadow: #f00;
+  text-decoration: wavy;
 }
