--- a/app/templates/book-search.hbs
+++ b/app/templates/book-search.hbs
@@ -4,7 +4,7 @@
     {{#each this.model as |book|}}
       <div class="book">
         <img src={{book.cover}} alt="Book cover" />
-        <div class="book-details">
+        <div class="search-book-details">
           <div class="title">{{book.title}}</div>
           <div class="author">{{book.authors}}</div>
           <div class="release-date">{{book.releaseDate}}</div>
