--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,6 @@
 @import url("book-search.css");
 @import url("sidebar.css");
+@import url("my-books.css");
 
 body {
   display: flex;
@@ -26,6 +27,7 @@ body {
   background-color: #f4f4f4;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
+  height: 50vh;
 }
 
 .section-link {
@@ -42,13 +44,14 @@ body {
 }
 
 .books-list {
+  background-color: #f9f9f9f9;
+  border-radius: 8px;
+  padding: 20px;
+  gap: 10px;
+  margin: 20px;
+
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  max-height: calc(4 * 100px);
-  overflow-y: hidden;
-  gap: 10px;
-  margin: 10px;
 }
 
 .my-book {
@@ -59,7 +62,6 @@ body {
   border: 1px solid #ccc;
   padding: 10px;
   text-align: center;
-  overflow: hidden;
 }
 
 .my-book-cover {
@@ -76,15 +78,9 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  text-align: left;
   background: rgba(95, 95, 95, 0.027);
   color: rgb(0, 0, 0);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   opacity: 0;
   transition: opacity 0.5s;
   will-change: opacity;
@@ -132,6 +128,7 @@ body {
 #my-books-section {
   grid-row: 1 / 3;
   grid-column: 2 / 3;
+  height: auto;
 }
 
 a {
@@ -143,6 +140,5 @@ h1 {
   text-align: center;
   padding-left: 50%;
   padding-right: 50%;
-  text-shadow: #f00;
   text-decoration: wavy;
 }
