--- a/app/styles/book-search.css
+++ b/app/styles/book-search.css
@@ -7,12 +7,12 @@
   grid-template-columns: 4fr 4fr;
 }
 
-.books-list {
+.search-books-list {
   background-color: #f9f9f9; /* Light grey background */
   border-radius: 8px; /* Rounded corners */
   padding: 20px; /* Spacing inside the container */
   margin: 20px 0; /* Margin for the top and bottom */
-  max-height: 500px; /* Maximum height of the container */
+  max-height: 100vh; /* Maximum height of the container */
   overflow-y: auto; /* Makes the list scrollable */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
@@ -41,6 +41,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .book .title {
   font-size: 1.2em; /* Larger text for the title */
   font-weight: bold; /* Bold font for the title */
